--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "^16.8.4",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.8.4",
+    "react-highlight-words": "^0.16.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
