--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "amdefine": "^1.0.1",
-    "antd": "^3.16.6",
+    "antd": "3.16.6",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
