--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@babel/register": "^7.4.0",
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-sass": "1.0.1",
     "amdefine": "^1.0.1",
-    "antd": "3.16.6",
+    "antd": "3.26.13",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -41,6 +41,7 @@
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
+    "file-saver": "^2.0.2",
     "group-array": "^1.0.0",
     "has-flag": "^3.0.0",
     "lodash": "^4.17.11",
@@ -48,7 +49,7 @@
     "moment-duration-format": "^2.3.2",
     "moment-range": "^4.0.2",
     "morgan": "^1.9.1",
-    "next": "^8.0.3",
+    "next": "8.0.3",
     "node-sass": "^4.12.0",
     "now-env": "^3.1.0",
     "nprogress": "^0.2.0",
