--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^16.8.4",
     "react-highlight-words": "^0.16.0",
     "react-redux": "^6.0.1",
+    "react-responsive-navbar": "^1.0.11",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
