--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
+    "dangerously-set-html-content": "^1.0.3",
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
