--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.28",
     "morgan": "^1.9.1",
     "next": "8.0.3",
     "node-sass": "^4.12.0",
