--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sequelize": "^5.1.0",
     "sequelize-cli": "^5.4.0",
     "uuid": "^3.3.3",
+    "video.js": "^7.8.2",
     "webpack": "^4.29.6",
     "xlsx": "^0.15.1"
   },
