--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "^10.11.0"
+    "node": "^13.14.0"
   },
   "scripts": {
     "dev": "node index.js",
@@ -62,6 +62,7 @@
     "pg-hstore": "^2.3.2",
     "print-html-element": "^0.5.1",
     "react": "^16.8.4",
+    "react-countup": "^4.3.3",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.8.4",
     "react-highlight-words": "^0.16.0",
