--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dangerously-set-html-content": "^1.0.3",
+    "ejs": "^3.1.5",
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
