--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-countup": "^4.3.3",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.8.4",
+    "react-draggable": "^4.4.3",
     "react-highlight-words": "^0.16.0",
     "react-redux": "^6.0.1",
     "react-responsive-navbar": "^1.0.11",
