--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "^13.14.0"
+    "node": "12.18.0"
   },
   "scripts": {
     "dev": "node index.js",
