--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "12.18.0"
+    "node": "13.14.0"
   },
   "scripts": {
     "dev": "node index.js",
@@ -87,6 +87,7 @@
     "xlsx": "^0.15.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^3.2.0"
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "2.2.1"
   }
 }
