--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^10.0.9",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
+    "abab": "^2.0.5",
     "amdefine": "^1.0.1",
     "antd": "3.26.13",
     "axios": "^0.19.0",
