--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@emotion/styled": "^10.0.9",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
-    "abab": "^2.0.5",
     "amdefine": "^1.0.1",
     "antd": "3.26.13",
     "axios": "^0.19.0",
@@ -39,6 +38,7 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dangerously-set-html-content": "^1.0.3",
     "ejs": "^3.1.5",
     "emotion": "^10.0.9",
