--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-draggable": "^4.4.3",
     "react-highlight-words": "^0.16.0",
     "react-i18next": "^9.0.10",
+    "react-query": "^3.16.0",
     "react-redux": "7.2.4",
     "react-responsive-navbar": "^1.0.11",
     "redux": "^4.0.1",
