--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.1.0",
     "sequelize-cli": "^5.4.0",
+    "styled-components": "^5.3.0",
     "uuid": "^3.3.3",
     "video.js": "7.7.4",
     "webpack": "^4.29.6",
