--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
-    "express-timeout-handler": "2.2.2",
     "file-saver": "^2.0.2",
     "group-array": "^1.0.0",
     "has-flag": "^3.0.0",
@@ -57,7 +56,7 @@
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.28",
     "morgan": "^1.9.1",
-    "next": "8.0.3",
+    "next": "9.0.2",
     "node-sass": "^4.12.0",
     "nodemailer": "^6.4.11",
     "now-env": "^3.1.0",
@@ -85,6 +84,8 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.1.0",
     "sequelize-cli": "^5.4.0",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.0",
     "uuid": "^3.3.3",
     "video.js": "7.7.4",
